shopping-app/src/app/components/cart/cart.component.css
img {
  width: 100px;
  border-radius: 10px;
}

.form-margin {
  margin-bottom: 12px;
}

.cart-item {
  display: flex;
  flex-direction: row;
  margin-bottom: 20px;
}

.cart-item-details {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: left;
  margin-left: 80px;
}

.number-input {
  width: 80px;
  text-align: center;
}

.cart-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 64px;
}

.cart-panel {
  margin-left: 50px;
  margin-right: 50px;
}

.empty-cart-message {
  display: flex;
  justify-content: center;
  margin-top: 64px;
}

.button {
  text-align: center;
  background: #33B5E5;
  color: #fff;
  padding: 6px;
  margin-left: 450px;
  margin-bottom: 12px;
}

.total-purchase-cost {
  margin-left: 67px;
  margin-right: 67px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.cart-column-start-point {
  display: flex;
  align-items: flex-start;
  gap: 60px;
}

.cart-column {
  flex: 1;
}

.billing-column {
  width: 400px;
  align-items: flex-start;
  top: 40px;
}

